# dbt-postgres-python

./: README.md  cliff.toml
.github/: pull_request_template.md
.github/actions/setup-local-fal/: action.yml
.github/workflows/: generate_typing.yml  poetry_lock.yml  python-release.yml  test_cli.yml  test_integration_adapter.yml  test_integration_cli.yml
projects/adapter/: README.md  cliff.toml  pyproject.toml
projects/adapter/cli_tests/features/steps/: fal_steps.py
projects/adapter/integration_tests/: requirements-dev.txt
projects/adapter/integration_tests/features/: cloud.feature  environment.py  source.feature  teleport.feature
projects/adapter/integration_tests/features/steps/: fal_adapter_steps.py
projects/adapter/integration_tests/profiles/postgres/: profiles.yml
projects/adapter/integration_tests/projects/env_project/: dbt_project.yml
projects/adapter/integration_tests/projects/simple_project/: dbt_project.yml
projects/adapter/src/dbt/adapters/fal/: __version__.py  load_db_profile.py  wrappers.py
projects/adapter/src/dbt/adapters/fal_experimental/: __version__.py  adapter_support.py  impl.py
projects/adapter/src/dbt/adapters/fal_experimental/telemetry/: telemetry.py
projects/adapter/src/dbt/adapters/fal_experimental/utils/: __init__.py  environments.py
projects/adapter/src/fal/dbt/: typing.py
projects/adapter/src/fal/dbt/cli/: args.py
projects/adapter/src/fal/dbt/telemetry/: telemetry.py
projects/adapter/tests/: conftest.py  test_cli.py
